@@ -4,3 +4,5 @@ from zope.interface import Interface
 class ITDHForm(Interface):
     """Generic interface for all customised forms used within this product."""
 
+class IRifcsRenderable(Interface):
+    """Generic interface for all content types that can provide RIF-CS."""
